objects/LLC_BI__Commercial_Experience__e.object
<CustomObject>
    <description>Platform event for Commercial Experience functionality.</description>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>Defines the category of the event within the domain.</description>
        <label>Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Context_Key__c</fullName>
        <description>Defines the individual context of the event.</description>
        <label>Context Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Data__c</fullName>
        <description>Information that the event hands off to any event listeners.</description>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Domain__c</fullName>
        <description>Defines the broad domain the event was created within.</description>
        <label>Domain</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>Defines whether an associated action was successful or not.</description>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Commercial Experience</label>
    <pluralLabel>Commercial Experience</pluralLabel>
</CustomObject>